home-assistant/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        runAsUser: 0
      containers:
        - name: home-assistant
          image: docker.io/homeassistant/home-assistant:2026.2.2
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /config-map.yaml
      
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
