home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    metallb.io/loadBalancerIPs: 10.0.0.243
spec:
  type: LoadBalancer
  selector:
    app: home-assistant
  ports:
    - port: 8123
      targetPort: 8123
      name: web
