home-assistant/home-assistant-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-route
  namespace: home-assistant
spec:
  hostnames:
    - ha.lan
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: web
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
